@@ -12,15 +12,19 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @PreAuthorize("hasRole('ADMIN')")
 @RequestMapping("/api/v1/admin/transactions")
 @RequiredArgsConstructor
 public class AdminTransactionController {
+
+    private static final Logger log = LoggerFactory.getLogger(AdminTransactionController.class);
 
     private final TransactionAuditService auditService;
     private final PaymentTransactionMapper mapper;
@@ -34,6 +38,8 @@ public class AdminTransactionController {
             @RequestParam(required = false) String type,
             @RequestParam(defaultValue = "false") boolean all) {
 
+        log.debug("Listing transactions: all={}", all);
+
         List<PaymentTransaction> transactions = all
                 ? auditService.getAll()
                 : auditService.getActive();
@@ -42,28 +48,28 @@ public class AdminTransactionController {
             List<User> matchingUsers = userRepository.findByNameContainingIgnoreCase(userName);
             List<Integer> userIds = matchingUsers.stream()
                     .map(User::getId)
-                    .collect(Collectors.toList());
+                    .toList();
             
             transactions = transactions.stream()
                     .filter(t -> userIds.contains(t.getUserId()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         if (userEmail != null && !userEmail.isEmpty()) {
             List<User> matchingUsers = userRepository.findByEmailContainingIgnoreCase(userEmail);
             List<Integer> userIds = matchingUsers.stream()
                     .map(User::getId)
-                    .collect(Collectors.toList());
+                    .toList();
             
             transactions = transactions.stream()
                     .filter(t -> userIds.contains(t.getUserId()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         if (status != null && !status.isEmpty()) {
             transactions = transactions.stream()
                     .filter(t -> t.getStatus().equalsIgnoreCase(status))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         if (type != null && !type.isEmpty()) {
@@ -71,7 +77,7 @@ public class AdminTransactionController {
                 PaymentType paymentType = PaymentType.valueOf(type.toUpperCase());
                 transactions = transactions.stream()
                         .filter(t -> t.getPaymentType() == paymentType)
-                        .collect(Collectors.toList());
+                        .toList();
             } catch (IllegalArgumentException e) {
             }
         }
@@ -88,6 +94,8 @@ public class AdminTransactionController {
             auditService.flagFailed(id);
         } else if ("SUCCESS".equalsIgnoreCase(status)) {
             auditService.markSuccess(id);
+        } else {
+            log.warn("Unrecognised status '{}' for txId={}", status, id);
         }
         
         return ResponseEntity.noContent().build();
@@ -95,25 +103,29 @@ public class AdminTransactionController {
 
     @PutMapping("/{id}/failed")
     public ResponseEntity<Void> markFailed(@PathVariable UUID id) {
+        log.info("Marking txId={} as FAILED", id);
         auditService.flagFailed(id);
         return ResponseEntity.noContent().build();
     }
 
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> softDelete(@PathVariable UUID id) {
+        log.warn("Soft-deleting txId={}", id);
         auditService.softDelete(id);
         return ResponseEntity.noContent().build();
     }
 
     @DeleteMapping("/{id}/hard")
     public ResponseEntity<Void> hardDelete(@PathVariable UUID id) {
+        log.warn("Hard-deleting txId={}", id);
         auditService.hardDelete(id);
         return ResponseEntity.noContent().build();
     }
 
     @PutMapping("/{id}/success")
     public ResponseEntity<Void> markSuccess(@PathVariable UUID id) {
+    log.info("Marking txId={} as SUCCESS", id);
     auditService.markSuccess(id);
     return ResponseEntity.noContent().build();
-}
+    }
 }
